battlelogic done, started tests